--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,10 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+    networks:
+      app_network:
+        aliases:
+          - postgres
 
   cache:
     image: redis:latest
@@ -24,6 +28,10 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+    networks:
+      app_network:
+        aliases:
+          - cache
 
 
   app:
@@ -40,6 +48,10 @@ services:
         condition: service_healthy
     volumes:
       - public_app_data:/app/public
+    networks:
+      app_network:
+        aliases:
+          - app
 
   postgres-exporter:
     image: prometheuscommunity/postgres-exporter
@@ -49,6 +61,10 @@ services:
         condition: service_healthy
     environment:
       DATA_SOURCE_NAME: "postgresql://${POSTGRES_USER:-user}:${POSTGRES_PASSWORD:-password}@postgres:5432/${POSTGRES_DB:-mydatabase}?sslmode=disable"
+    networks:
+      app_network:
+        aliases:
+          - postgres_exporter
   
   prometheus:
     image: prom/prometheus
@@ -59,6 +75,10 @@ services:
     volumes:
       - ./monitoring:/etc/prometheus
       - prometheus_data:/prometheus
+    networks:
+      app_network:
+        aliases:
+          - prometheus
 
   grafana:
     image: grafana/grafana
@@ -68,6 +88,10 @@ services:
         condition: service_started
     volumes:
       - grafana_data:/var/lib/grafana
+    networks:
+      app_network:
+        aliases:
+          - grafana
 
 volumes:
   postgres_data:
@@ -75,3 +99,7 @@ volumes:
   public_app_data:
   prometheus_data:
   grafana_data:
+
+networks:
+  app_network:
+    driver: bridge
