--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,12 @@ logs
 
 # Ignore uploads directory
 /public/uploads/**/*
+
+# Terraform
+.terraform
+.terraform.lock.hcl
+# Ignore Terraform state files
+*.tfstate
+*.tfstate.backup
+# Ignore Terraform plan files
+*.tfplan
