--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
   app:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: docker/app.dockerfile
     container_name: express-vue-app
     environment:
       POSTGRES_URL: postgres://${POSTGRES_USER:-user}:${POSTGRES_PASSWORD:-password}@postgres:5432/${POSTGRES_DB:-mydatabase}
@@ -67,13 +67,14 @@ services:
           - postgres_exporter
   
   prometheus:
-    image: prom/prometheus
+    build:
+      context: .
+      dockerfile: docker/prometheus.dockerfile
     container_name: prometheus
     depends_on:
       postgres-exporter:
         condition: service_started
     volumes:
-      - ./monitoring:/etc/prometheus
       - prometheus_data:/prometheus
     networks:
       app_network:
