--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,17 +39,17 @@ jobs:
 
     - name: Build and Push App Docker image to ECR
       run: |
-        APP_IMAGE_URI=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO-app:$IMAGE_TAG
-        docker build -t $ECR_REPO-app:$IMAGE_TAG -f docker/app.dockerfile .
-        docker tag $ECR_REPO-app:$IMAGE_TAG $APP_IMAGE_URI
+        APP_IMAGE_URI=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO:$IMAGE_TAG-app
+        docker build -t $ECR_REPO:$IMAGE_TAG-app -f docker/app.dockerfile .
+        docker tag $ECR_REPO:$IMAGE_TAG-app $APP_IMAGE_URI
         docker push $APP_IMAGE_URI
         echo "APP_IMAGE_URI=$APP_IMAGE_URI" >> $GITHUB_ENV
 
     - name: Build and Push Prometheus Docker image to ECR
       run: |
-        PROMETHEUS_IMAGE_URI=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO-prometheus:$IMAGE_TAG
-        docker build -t $ECR_REPO-prometheus:$IMAGE_TAG -f docker/prometheus.dockerfile .
-        docker tag $ECR_REPO-prometheus:$IMAGE_TAG $PROMETHEUS_IMAGE_URI
+        PROMETHEUS_IMAGE_URI=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO:$IMAGE_TAG-prometheus
+        docker build -t $ECR_REPO:$IMAGE_TAG-prometheus -f docker/prometheus.dockerfile .
+        docker tag $ECR_REPO:$IMAGE_TAG-prometheus $PROMETHEUS_IMAGE_URI
         docker push $PROMETHEUS_IMAGE_URI
         echo "PROMETHEUS_IMAGE_URI=$PROMETHEUS_IMAGE_URI" >> $GITHUB_ENV
 
