--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,11 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-user} -d ${POSTGRES_DB:-mydatabase}"]
+      test:
+        [
+          "CMD-SHELL",
+          "pg_isready -U ${POSTGRES_USER:-user} -d ${POSTGRES_DB:-mydatabase}",
+        ]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -33,7 +37,6 @@ services:
         aliases:
           - cache
 
-
   app:
     build:
       context: .
@@ -52,6 +55,11 @@ services:
       app_network:
         aliases:
           - app
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3000"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   postgres-exporter:
     image: prometheuscommunity/postgres-exporter
@@ -65,7 +73,7 @@ services:
       app_network:
         aliases:
           - postgres_exporter
-  
+
   prometheus:
     build:
       context: .
