--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "express-vue-postgres",
+  "name": "devops-flan",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "nodemon server/src/main.ts",
     "build": "tsc -p server && vite build",
     "start": "NODE_ENV=production node dist/main.js",
-    "test": "jest --passWithNoTests",
+    "test:webapp": "vitest --run",
+    "test:server": "jest server",
     "lint": "eslint .",
     "lint:webapp": "eslint webapp",
     "lint:server": "eslint server",
@@ -73,11 +74,13 @@
     "nodemon": "^3.1.9",
     "prettier": "^3.6.2",
     "sass-embedded": "^1.89.0",
+    "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.1",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.36.0",
     "vite": "^6.0.5",
+    "vitest": "^3.2.4",
     "vue-eslint-parser": "^10.2.0",
     "vue-tsc": "^2.2.0"
   }
