--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -1,8 +1,8 @@
 services:
   app:
-    ports: 
-      - "3000:3000"
-  
+    ports:
+      - "3000:${APP_INTERNAL_PORT:-3000}"
+
   grafana:
     ports:
       - "3001:3000"
