--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,6 +58,19 @@ services:
         condition: service_healthy
     environment:
       DATA_SOURCE_NAME: "postgresql://${POSTGRES_USER:-user}:${POSTGRES_PASSWORD:-password}@postgres:5432/${POSTGRES_DB:-mydatabase}?sslmode=disable"
+    healthcheck:
+      test:
+        [
+          "CMD",
+          "wget",
+          "--no-verbose",
+          "--tries=1",
+          "--spider",
+          "http://localhost:9187/metrics",
+        ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   prometheus:
     build:
@@ -66,7 +79,7 @@ services:
     container_name: prometheus
     depends_on:
       postgres-exporter:
-        condition: service_started
+        condition: service_healthy
     volumes:
       - prometheus_data:/prometheus
 
