--- a/prometheus.yml
+++ b/prometheus.yml
@@ -2,6 +2,6 @@ global:
   scrape_interval: 15s
 
 scrape_configs:
-  - job_name: 'postgres-exporter'
+  - job_name: "postgres-exporter"
     static_configs:
-      - targets: ['postgres_exporter:9187']
+      - targets: ["postgres-exporter:9187"]
